--- a/user.html
+++ b/user.html
@@ -17,9 +17,12 @@
     <script type="text/javascript" src="js/angular-route.min.js"></script>
     <script type="text/javascript" src="js/jquery-1.11.2.js"></script>
     <script type="text/javascript" src="js/progression.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/publica.js"></script>
     <script src="js/jquery.cookie.js"></script>
     <script src="js/pestana.js"></script>
+    <script type="text/javascript" src="http://www.parsecdn.com/js/parse-latest.js"></script>
+    <script type="text/javascript" src="js/parse.js"></script>
+    
 </head>
 
 <body>
