--- a/login.html
+++ b/login.html
@@ -16,10 +16,11 @@
     <link rel="stylesheet" href="css/styleindex.css">
     <link rel="stylesheet" href="css/progression.css">
     <script type="text/javascript" src="js/jquery-1.11.2.js"></script>
-    <script type="text/javascript" src="js/progression.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/jquery.cookie.js"></script>
     <script type="text/javascript" src="js/funciones.js"></script>
+    <script type="text/javascript" src="js/progression.js"></script>
+    <script type="text/javascript" src="http://www.parsecdn.com/js/parse-latest.js"></script>
     <script type="text/javascript" src="js/login.js"></script>
 </head>
 
@@ -38,22 +39,19 @@
         <div class="row">
             <div class="col-xs-offset-1 col-xs-10 col-sm-offset-3 col-sm-6 col-md-offset-4 col-md-4 col-lg-4 contenedor">
                 <img src="img/contac.png" class="img-circle" alt="Cinque Terre">
-                <form id="formularioLogin">
+                <div id="formularioLogin">
                     <legend>Login</legend>
                     <div class="form-group">
-                        <input type="text" id="usuario" name="usuario" class="form-control" placeholder="Usuario" data-progression data-helper="Ejemplo de nombre: Ivan Romero Garcia"
-                        required>
+                        <input type="text" id="username" name="usuario" class="form-control" placeholder="Usuario" data-progression data-helper="Ejemplo de nombre: Ivan Romero Garcia" required>
                         <br>
-                        <input type="password" id="password" name="password" class="form-control" placeholder="Contraseña" data-progression data-helper="Contraseña asiganado al usuario puede ser una palabra alfanumerica"
-                        required>
+                        <input type="password" id="password" name="password" class="form-control" placeholder="Contraseña" data-progression data-helper="Contraseña asiganado al usuario puede ser una palabra alfanumerica" required>
                         <br/>
                         <button id="iniciar" class="btn btn-primary">Iniciar</button>
                         <a href="registro.html" class="col-xs-offset-2 col-sm-offset-6 col-md-offset-6">Registrarse</a>
                     </div>
                     <div id="mensaje">
-
                     </div>
-                </form>
+                <div>
             </div>
         </div>
     </div>
