--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
                 <div id="formularioLogin">
                     <legend>Login</legend>
                     <div class="form-group">
-                        <input type="text" id="username" name="usuario" class="form-control" placeholder="Usuario" data-progression data-helper="Ejemplo de nombre: Ivan Romero Garcia" required>
+                        <input type="text" id="usuario" name="usuario" class="form-control" placeholder="Usuario" data-progression data-helper="Ejemplo de nombre: Ivan Romero Garcia" required>
                         <br>
                         <input type="password" id="password" name="password" class="form-control" placeholder="Contraseña" data-progression data-helper="Contraseña asiganado al usuario puede ser una palabra alfanumerica" required>
                         <br/>
