--- a/asiizq.html
+++ b/asiizq.html
@@ -7,16 +7,16 @@
             <legend>Filtros Busqueda</legend>
             <div class="form-group">
                 <label for="precios">Precios</label>
-                <input type="number" name="preciomax" class="datosF form-control" placeholder="Precio Max" min="0">
+                <input type="number" name="precio" class="datosF form-control" placeholder="Precio Max" min="0">
                 <br/>
                 <label for="cuartos">N° Cuartos</label>
-                <input type="number" name="cuartos" class="datosF form-control" id="cuartos" placeholder="Cuartos" min="0" max="10" >
+                <input type="number" name="numeroCuartos" class="datosF form-control" id="cuartos" placeholder="Cuartos" min="0" max="10" >
                 <br/>
                 <label for="banos">N° Baños</label>
-                <input type="number" name="banos" class="datosF form-control" id="banos" placeholder="N° Baños" min="0">
+                <input type="number" name="numeroBathrooms" class="datosF form-control" id="banos" placeholder="N° Baños" min="0">
                 <br/>
                 <label for="plantas">N° Plantas</label>
-                <input type="number" name="plantas" class="datosF form-control" id="plantas" placeholder="N° Plantas" min="0">
+                <input type="number" name="numeroPlantas" class="datosF form-control" id="plantas" placeholder="N° Plantas" min="0">
                 <br/>
                 <div class="col-xs-offset-9 col-sm-offset-7 col-md-offset-8 col-lg-offset-9">
                     <button type="submit" id="btfiltros" class="btn btn-primary">Enviar</button>
