--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	                <div class="form-group">
 		                <input type="text" class="form-control" placeholder="Colonia" id="colonia">
                     </div>
-                	<button id="busqueda" type="submit" class="btn btn-primary">Submit</button>
+                	<button id="busqueda" type="submit" class="btn btn-primary">Buscar</button>
                         </div>
 
                         <ul class="nav navbar-nav navbar-right">
