--- a/login.html
+++ b/login.html
@@ -42,19 +42,21 @@
                 <div id="formularioLogin">
                     <legend>Login</legend>
                     <div class="form-group">
-                        <input type="text" id="usuario" name="usuario" class="form-control" placeholder="Usuario" data-progression data-helper="Ejemplo de nombre: Ivan Romero Garcia" required>
+                        <input type="text" id="usuario" name="usuario" class="form-control" placeholder="Usuario" data-progression data-helper="Ejemplo de nombre: Ivan Romero Garcia"
+                        required>
                         <br>
-                        <input type="password" id="password" name="password" class="form-control" placeholder="Contraseña" data-progression data-helper="Contraseña asiganado al usuario puede ser una palabra alfanumerica" required>
+                        <input type="password" id="password" name="password" class="form-control" placeholder="Contraseña" data-progression data-helper="Contraseña asiganado al usuario puede ser una palabra alfanumerica"
+                        required>
                         <br/>
                         <button id="iniciar" class="btn btn-primary">Iniciar</button>
                         <a href="registro.html" class="col-xs-offset-2 col-sm-offset-6 col-md-offset-6">Registrarse</a>
                     </div>
                     <div id="mensaje">
                     </div>
-                <div>
+                    <div>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
 </body>
 
 </html>
