--- a/asiizq.html
+++ b/asiizq.html
@@ -2,7 +2,7 @@
 <script type="text/javascript" src="js/funciones.js"></script>
 <script type="text/javascript" src="js/peticiones.js"></script>
 <div id="asi" class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
-    <div id="filtros">
+    <form id="filtros">
         <div id="fomularioFiltros">
             <legend>Filtros Busqueda</legend>
             <div class="form-group">
@@ -10,13 +10,13 @@
                 <input type="number" name="precio" class="datosF form-control" placeholder="Precio Max" min="0">
                 <br/>
                 <label for="cuartos">N° Cuartos</label>
-                <input type="number" name="numeroCuartos" class="datosF form-control" id="cuartos" placeholder="Cuartos" min="0" max="10" >
+                <input type="number" name="numeroCuartos" class="datosF form-control" id="cuartos" placeholder="Cuartos" min="0" max="10">
                 <br/>
                 <label for="banos">N° Baños</label>
-                <input type="number" name="numeroBathrooms" class="datosF form-control" id="banos" placeholder="N° Baños" min="0">
+                <input type="number" name="numeroBathrooms" class="datosF form-control" id="banos" placeholder="N° Baños" min="0" max="10">
                 <br/>
                 <label for="plantas">N° Plantas</label>
-                <input type="number" name="numeroPlantas" class="datosF form-control" id="plantas" placeholder="N° Plantas" min="0">
+                <input type="number" name="numeroPlantas" class="datosF form-control" id="plantas" placeholder="N° Plantas" min="0" max="10">
                 <br/>
                 <div class="col-xs-offset-9 col-sm-offset-7 col-md-offset-8 col-lg-offset-9">
                     <button type="submit" id="btfiltros" class="btn btn-primary">Enviar</button>
@@ -24,5 +24,5 @@
             </div>
             <p>Nota: Usted puede llenar o no todos lo campos, la busqueda se realizara por los campo llenos o solicitados.</p>
         </div>
-    </div>
+    </form>
 </div>
