--- a/index.html
+++ b/index.html
@@ -12,16 +12,13 @@
     <link rel="stylesheet" href="css/styleindex.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <script type="text/javascript" src="js/jquery-1.11.2.js"></script>
     <script type="text/javascript" src="js/angular.min.js"></script>
     <script type="text/javascript" src="js/angular-route.min.js"></script>
     <script type="text/javascript" src="js/jquery.cookie.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/bootstrap-paginator.js"></script>
-    <script type="text/javascript" src="js/sesion.js"></script>
     <script type="text/javascript" src="http://www.parsecdn.com/js/parse-latest.js"></script>
-    <script type="text/javascript" src="js/jquery.paginate.js" ></script>
     <script type="text/javascript" src="js/funciones.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 </head>
@@ -44,18 +41,18 @@
                 </div>
                 <div>
                     <div class="collapse navbar-collapse" id="myNavbar">
-                    <div class="form-inline" style="padding-top:10px">
-                        <select name="servicio" id="servicio" class="datos form-control">
-                            <option value="0">Tipo de servicio</option>
-                            <option value="1">Venta</option>
-                            <option value="2">Renta</option>
-                            <option value="3">Pension</option>
-                            <option value="4">A Tratar</option>
-                        </select>
-	                <div class="form-group">
-		                <input type="text" class="form-control" placeholder="Colonia" id="colonia">
-                    </div>
-                	<button id="busqueda" type="submit" class="btn btn-primary">Buscar</button>
+                        <div class="form-inline" style="padding-top:10px">
+                            <select name="servicio" id="servicio" class="datos form-control">
+                                <option value="0">Tipo de servicio</option>
+                                <option value="1">Venta</option>
+                                <option value="2">Renta</option>
+                                <option value="3">Pension</option>
+                                <option value="4">A Tratar</option>
+                            </select>
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Colonia" id="colonia">
+                            </div>
+                            <button id="busqueda" type="submit" class="btn btn-primary">Buscar</button>
                         </div>
 
                         <ul class="nav navbar-nav navbar-right">
@@ -71,7 +68,7 @@
                                     <li class="divider menu2"></li>
                                     <li id="favoritos" class="menu2"><a href="user.html">Favoritos</a></li>
                                     <li class="divider menu2"></li>
-                                    <li id="anuncios" class="menu2"><a href="user.html">Mis Anuncios</a></li>
+                                    <li id="anuncios" class="menu2"><a href="user.html">Mi Perfil</a></li>
                                     <li class="divider menu2"></li>
                                     <li id="notificaciones" class="menu2"><a href="user.html">Notificaciones</a></li>
                                     <li class="divider menu2"></li>
@@ -89,7 +86,7 @@
         <div class="row">
             <!---Aside de filtros de busqueda de la pagina extraido de una plantilla---->
             <aside id="asi" ng-include src="'asiizq.html'">
-                
+
             </aside>
 
             <!---Section de la paguina---->
@@ -100,15 +97,12 @@
 
 
                 </div>
-                                    <!--div que va contener las paguinaciones de la paguina-->
-                    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-                        <div id="paginacion" class="col-sm-offset-1 col-md-offset-3">
+                <!--div que va contener las paguinaciones de la paguina-->
+                <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+                    <div id="paginacion" class="col-sm-offset-1 col-md-offset-3">
 
-                        </div>
-                        <script type="text/javascript">
-
-                        </script>
                     </div>
+                </div>
             </section>
             <!--Fin dela seccion de la pagina-->
 
