--- a/publicaInmueble.html
+++ b/publicaInmueble.html
@@ -1,10 +1,14 @@
 <!doctype html>
+<html>
 
 <head>
     <meta charset="utf-8">
+    <meta name="description" content="Realiza la búsqueda de casa, departamento que deseas de tu gusto">
+    <meta name="author" content="Ivan Romero Garcia">
+    <meta name="keywords" content="casas, departamentos, renta, venta, pensión">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Confor House</title>
-    <meta name="description" content="My Parse App">
-    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/progression.css">
     <script type="text/javascript" src="js/jquery-1.11.2.js"></script>
@@ -60,4 +64,5 @@
         </div>
     </div>
 </body>
+
 </html>
