--- a/registro.html
+++ b/registro.html
@@ -25,8 +25,46 @@
 </head>
 
 <body>
-    <header ng-include src="'header.html'">
-
+    <header>
+        <nav class="navbar navbar-default" data-spy="affix" data-offset-top="197">
+            <div class="container-fluid buscador">
+                <div class="navbar-header  ">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="index.html">
+                        <p class="letras">Conform House</p>
+                    </a>
+                </div>
+                <div>
+                    <div class="collapse navbar-collapse" id="myNavbar">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li>
+                                <span class="glyphicon glyphicon-user dropdown-toggle icon" data-toggle="dropdown">
+                        <span class="caret"></span>
+                                </span>
+                                <ul class="dropdown-menu">
+                                    <li class="menu1"><a href="login.html">Entrar</a></li>
+                                    <li class="divider menu1"></li>
+                                    <li class="menu1"><a href="registro.html">Registrate</a></li>
+                                    <li id="publica" class="menu2"><a href="user.html">Publica</a></li>
+                                    <li class="divider menu2"></li>
+                                    <li id="favoritos" class="menu2"><a href="user.html">Favoritos</a></li>
+                                    <li class="divider menu2"></li>
+                                    <li id="anuncios" class="menu2"><a href="user.html">Mi Perfil</a></li>
+                                    <li class="divider menu2"></li>
+                                    <li id="notificaciones" class="menu2"><a href="user.html">Notificaciones</a></li>
+                                    <li class="divider menu2"></li>
+                                    <li class="menu2"><a href="index.html" id="cerrar">Salir</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
     </header>
     <div class="container-fluid">
         <div class="col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-5 contenedor">
@@ -50,7 +88,7 @@
                 </div>
                 <div class="form-group">
                     <label for="password2">Repita la contraseña</label>
-                    <input type="password2" class="form-control" id="password2" data-progression data-helper="Repita la contraseña del campo anterior"
+                    <input type="password" class="form-control" id="password2" data-progression data-helper="Repita la contraseña del campo anterior"
                     required placeholder="****">
                 </div>
                 <div class="form-group">
