--- a/user.html
+++ b/user.html
@@ -57,7 +57,7 @@
                                     <li class="divider menu2"></li>
                                     <li id="favoritos" class="menu2"><a href="user.html">Favoritos</a></li>
                                     <li class="divider menu2"></li>
-                                    <li id="anuncios" class="menu2"><a href="user.html">Mi Perfil</a></li>
+                                    <li id="perfil" class="menu2"><a href="user.html">Mi Perfil</a></li>
                                     <li class="divider menu2"></li>
                                     <li id="notificaciones" class="menu2"><a href="user.html">Notificaciones</a></li>
                                     <li class="divider menu2"></li>
